SLCORE-631 Translate flow file paths when opening issue